--- a/UrbanLife.Web/Views/Shared/_Layout.cshtml
+++ b/UrbanLife.Web/Views/Shared/_Layout.cshtml
@@ -18,34 +18,81 @@
                     <li class="nav-list-item">Welcome back, @ViewBag.User.FirstName</li>
                 }
                 <li class="nav-list-item">
-                    <a href="/">Home</a>
+                    <a class="nav-anchor" href="/">Home</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="#">Travel</a>
+                    <a class="nav-anchor" href="#">Travel</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="#">Time table</a>
+                    <a class="nav-anchor" href="#">Time table</a>
                 </li>
                 @if (ViewBag.User != null)
                 {
                     <li class="nav-list-item">
-                        <a href="#">Subscriptions</a>
+                        <a class="nav-anchor" href="#">Subscriptions</a>
                     </li>
                 }
                 <li class="nav-list-item">
                     <div class="image-container">
                         @if (ViewBag.User != null)
                         {
-                            <img src="./images/profile-pictures/custom-pictures/@ViewBag.ProfilePictureName" alt="Profile" />
+                            <img class="profile-picture" src="./images/profile-pictures/custom-pictures/@ViewBag.ProfilePictureName" alt="Profile" />
                         }
                         else
                         {
-                            <img src="./images/profile-pictures/guest.png" alt="Profile" />
+                            <img class="profile-picture" src="./images/profile-pictures/guest.png" alt="Profile" />
                         }
                     </div>
                 </li>
             </ul>
         </nav>
+        <!--User profile html-->
+        <aside id="profile-menu" style="display: none">
+            <ul class="profile-menu-list">
+                @if (!User.Identity.IsAuthenticated)
+                {
+                    <li class="profile-menu-list-item">
+                        <span class="profile-item">Guest</span>
+                    </li>
+                    <li class="profile-menu-list-item">
+                        <a id="log-in-btn" class="nav-anchor profile-item" href="#">Log in</a>
+                    </li>
+                    <li class="profile-menu-list-item">
+                        <a class="nav-anchor profile-item" href="#">Register</a>
+                    </li>
+                }
+                else
+                {
+                    <li class="profile-menu-list-item">
+                        <span class="profile-item">@ViewBag.User.FirstName @ViewBag.User.LastName</span>
+                    </li>
+                    <li class="profile-menu-list-item">
+                        <a class="nav-anchor profile-item" href="#">
+                            <i class="fa-solid fa-user"></i>
+                            &ensp;Account
+                        </a>
+                    </li>
+                    <li class="profile-menu-list-item">
+                        <a class="nav-anchor profile-item" href="#">
+                            <i class="fa-solid fa-ticket"></i>
+                            &ensp;Purchases
+                        </a>
+                    </li>
+                    <li class="profile-menu-list-item">
+                        <a class="nav-anchor profile-item" href="#">
+                            <i class="fa-solid fa-credit-card"></i>
+                            &ensp;Payment methods
+                        </a>
+                    </li>
+                    <li class="profile-menu-list-item">
+                        <a id="log-out-btn" class="nav-anchor profile-item" href="#">
+                            <i class="fa-solid fa-right-from-bracket"></i>
+                            &ensp;Log out
+                        </a>
+                    </li>
+                }
+            </ul>
+        </aside>
     </header>
     <main>
         @RenderBody()
@@ -89,6 +136,7 @@
             <p class="footer-copyright-item">Author - Boris Evtimov, Bulgaria, Sofia</p>
         </section>
     </footer>
+    <script src="./js/profilePartialMenu.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
