Fixed register, created login and added attribute validation in forms

--- a/UrbanLife.Web/Views/Home/Index.cshtml
+++ b/UrbanLife.Web/Views/Home/Index.cshtml
@@ -1,1 +1,5 @@
-﻿<span>Text to divide navigation from footer</span>
+﻿@{
+    ViewData["Title"] = "Начало";
+}
+
+<span>Text to divide navigation from footer</span>
