--- a/UrbanLife.Web/Views/User/Register.cshtml
+++ b/UrbanLife.Web/Views/User/Register.cshtml
@@ -11,25 +11,45 @@
             Вече имате профил?
             <a href="/user/login">Вписване</a>
         </p>
-        <div class="form-body">
+        <div class="form-single-element">
             <label asp-for=@Model.Email>*Имейл адрес</label>
-            <input asp-for=@Model.Email class="main-form-input form-control" type="email" placeholder="mock@@test.com" />
-            <span asp-validation-for=@Model.Email></span>
-            <label asp-for=@Model.FirstName>*Име</label>
-            <input asp-for=@Model.FirstName class="main-form-input" type="text" placeholder="Иван" />
-            <label asp-for=@Model.LastName>*Фамилия</label>
-            <input asp-for=@Model.LastName class="main-form-input" type="text" placeholder="Димитров" />
-            <label asp-for=@Model.Password>*Парола</label>
-            <input asp-for=@Model.Password class="main-form-input" type="password" />
-            <label asp-for=@Model.ConfirmPassword>*Потвърди паролата</label>
-            <input asp-for=@Model.ConfirmPassword class="main-form-input" type="password" />
+            <input asp-for=@Model.Email class="main-form-input" type="email" placeholder="mock@@test.com" />
+        </div>
+        <div><span asp-validation-for=@Model.Email class="form-text-danger"></span></div>
+        <div class="form-row">
+            <div class="form-row-element">
+                <label asp-for=@Model.FirstName>*Име</label>
+                <input asp-for=@Model.FirstName class="main-form-input" type="text" placeholder="Иван" />
+            </div>
+            <div class="form-row-element form-family-element">
+                <label asp-for=@Model.LastName>*Фамилия</label>
+                <input asp-for=@Model.LastName class="main-form-input" type="text" placeholder="Димитров" />
+            </div>
+        </div>
+        <div><span asp-validation-for=@Model.FirstName class="form-text-danger"></span></div>
+        <div><span asp-validation-for=@Model.LastName class="form-text-danger"></span></div>
+        <div class="form-row">
+            <div class="form-row-element">
+                <label asp-for=@Model.Password>*Парола</label>
+                <input asp-for=@Model.Password class="main-form-input" type="password" />
+            </div>
+            <div class="form-row-element">
+                <label asp-for=@Model.ConfirmPassword>*Потвърди паролата</label>
+                <input asp-for=@Model.ConfirmPassword class="main-form-input" type="password" />
+            </div>
+        </div>
+        <div><span asp-validation-for=@Model.Password class="form-text-danger"></span></div>
+        <div><span asp-validation-for=@Model.ConfirmPassword class="form-text-danger"></span></div>
+        <div class="form-single-element">
             <label asp-for=@Model.ProfilePicture>Профилна снимка</label>
             <input asp-for=@Model.ProfilePicture type="file" class="image-input" accept="image/*" />
         </div>
         <div class="register-btn-container">
             <input type="submit" class="register-btn" value="Регистриране" />
         </div>
-        <strong>Полетата със * са задължителни!</strong>
+        <div class="form-header">
+            <strong>Полетата със * са задължителни!</strong>
+        </div>
     </form>
 </section>
 
