--- a/UrbanLife.Web/wwwroot/css/layout.css
+++ b/UrbanLife.Web/wwwroot/css/layout.css
@@ -22,7 +22,9 @@
     }
 
 .image-container {
+    margin-top: 0.5vh;
     height: 7vh;
+    width: 7vh;
     object-fit: contain;
     border-radius: 50%;
     overflow: hidden;
