--- a/UrbanLife.Web/wwwroot/css/layout.css
+++ b/UrbanLife.Web/wwwroot/css/layout.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 6;
 }
 
     .main-nav > ul {
@@ -83,6 +84,7 @@
     top: 8vh;
     right: 1vw;
     width: 250px;
+    z-index: 6;
 }
 
 .profile-menu-list {
@@ -127,8 +129,7 @@
 
 main {
     padding-top: 8vh;
-    padding-left: 30px;
-    padding-right: 30px;
+    z-index: 1;
 }
 
 #footer-info {
