Made changes to the css regarding image fit in service container

--- a/UrbanLife.Web/wwwroot/css/index.css
+++ b/UrbanLife.Web/wwwroot/css/index.css
@@ -63,12 +63,11 @@
 .service-card-image-container {
     height: 50%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     overflow: hidden;
 }
 
     .service-card-image-container > img {
-        width: 100%;
     }
 
 .service-card-btn {
