Implemented db client-side validation

--- a/UrbanLife.Web/Views/User/Login.cshtml
+++ b/UrbanLife.Web/Views/User/Login.cshtml
@@ -21,6 +21,7 @@
             <input asp-for=@Model.Password type="password" />
         </div>
         <div><span asp-validation-for=@Model.Password class="form-text-danger"></span></div>
+        <div><span asp-validation-for=@Model.InvalidProfile class="form-text-danger"></span></div>
         <div class="login-btn-container">
             <input type="submit" class="login-btn" value="Вписване" />
         </div>
