--- a/UrbanLife.Web/Views/User/Register.cshtml
+++ b/UrbanLife.Web/Views/User/Register.cshtml
@@ -16,6 +16,7 @@
             <input asp-for=@Model.Email class="main-form-input" type="email" placeholder="mock@@test.com" />
         </div>
         <div><span asp-validation-for=@Model.Email class="form-text-danger"></span></div>
+        <div><span asp-validation-for=@Model.EmailAlreadyUsed class="form-text-danger"></span></div>
         <div class="form-row">
             <div class="form-row-element">
                 <label asp-for=@Model.FirstName>*Име</label>
