--- a/UrbanLife.Web/Views/Shared/_Layout.cshtml
+++ b/UrbanLife.Web/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                         <span class="profile-item">@ViewBag.User.FirstName @ViewBag.User.LastName</span>
                     </li>
                     <li class="profile-menu-list-item">
-                        <a class="nav-anchor profile-item" href="#">
+                        <a class="nav-anchor profile-item" href="/user/account/settings/@ViewBag.User.Id">
                             <i class="fa-solid fa-user"></i>
                             &ensp;Профил
                         </a>
