--- a/UrbanLife.Web/Views/Account/Settings.cshtml
+++ b/UrbanLife.Web/Views/Account/Settings.cshtml
@@ -86,7 +86,7 @@
     </section>
     <div class="form-row form-row-btns">
         <input type="submit" value="Потвърди промените" class="main-input submit-btn" />
-        <a href="/user/account/settings?userId=@ViewBag.User.Id" class="main-input anchor-button submit-btn">Отмяна</a>
+        <a href="/user/account/settings" class="main-input anchor-button submit-btn">Отмяна</a>
     </div>
 </form>
 
